--- a/Sample.module/module.html
+++ b/Sample.module/module.html
@@ -1,4 +1,5 @@
 {{ require_js("https://code.jquery.com/jquery-3.4.0.min.js", "head") }}
+{{ require_js("https://cdn.jsdelivr.net/npm/enhanced-bind-polyfill@0.0.2/index.min.js", "head") }}
 {{ require_js("https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js", "head") }}
 {{ require_js("https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/ScrollToPlugin.min.js", "head") }}
 
@@ -14,7 +15,7 @@
           <div class="belchj-inner-content-wrapper">
             {{section.section_content}}
           </div>
-        </div>      
+        </div>
       {% endfor %}
     </div>
     <div class="right" style="background: {{ module.sticky_content_background_color.color }};">
@@ -28,7 +29,7 @@
             response_redirect_url="{{module.sticky_form.redirect_url}}"
             gotowebinar_webinar_key="{{ module.sticky_form.gotowebinar_webinar_key }}"
           %}
-      </div>      
+      </div>
     </div>
   </div>
 </div>
